package day03.part6_challangeDay04;

public interface ISalary {
    public void calculateTotalSalary();

    public void calcTax();
}
