package day03.part6_challangeDay04.hr;

public enum Roles {
    PROGRAMMER,
    SALES,
    QA,
    EMPLOYEE
}
